Got rid of bottomContainer on mobile, fixed img src

--- a/css/style.scss
+++ b/css/style.scss
@@ -442,7 +442,8 @@ html {
 				}
 			}
 			.bottomContainer {
-				position: static;
+				display: none;
+				// position: static;
 				&:hover {
 					background-color: rgba(255, 255, 255, 0.6);
 				}
